# MPI

./: CMakeLists.txt  README.md  commands.txt  communicator.cpp  main.cpp  p2p_communication.cpp
MPI-Section-Programs/: Bcast_reduce.c  SampleInLab.c  build_compile.bat  hello_mpi.cpp  input_out_mpi.cpp  scatter.c  send_rec_example.c
